# eu07-spt

./: .cproject  .hgignore  .project  .sconsign.dblite  CMakeLists.txt  Makefile  SConstruct  getdep.bat  getdep.py  getdep_config.py  sctwriter.py  tpbp-new2.tga  tpd-oil1.tga
applications/: CMakeLists.txt
applications/spt/: CMakeLists.txt  SConscript
applications/spt/include/: SectorView.h  VehicleView.h
applications/spt/include/view/: VehicleView.h
applications/spt/src/: CMakeLists.txt  ReaderSCT.cpp  ReaderSCV.cpp  SConscript  SceneryAccess.cpp  SectorNode.cpp  SectorNode.h  SectorView.cpp  SectorView.h  VehicleView.cpp  VehicleView.h  main.cpp
applications/spt/src/components/: Body.cpp  Bogie.cpp  CMakeLists.txt  main.cpp
applications/spt/src/view/: CMakeLists.txt  Components.cpp  SectorView.cpp  Util.cpp  VehicleView.cpp
applications/spt/src/view/components/: Body.cpp  Bogie.cpp
applications/spt/wrappers/: _view.cpp
applications/sptClient/: CMakeLists.txt
applications/sptClient/include/view/: Components.h  TrainsetView.h  Util.h  VehicleView.h
applications/sptClient/src/: CMakeLists.txt  ReaderSCT.cpp  ReaderSCV.cpp  SConscript  SceneryAccess.h  SectorNode.cpp  SectorNode.h  main.cpp
applications/sptClient/src/view/: CMakeLists.txt  Components.cpp  SectorView.cpp  Util.cpp  VehicleView.cpp
applications/sptClient/src/view/components/: Bogie.cpp
applications/sptClient/wrappers/: CMakeLists.txt  _components.cpp  _view.cpp
applications/sptEditor/: CMakeLists.txt  SConscript  history.txt  runTests  setup.cfg  setup.py  sptEditor  sptEditor.bat
applications/sptEditor/doc/: sptmath.rst
applications/sptEditor/src/: Application.py  Application.xrc  CMakeLists.txt  osgwx.py  prefabric.yaml  proptest.py  scengen.py  sptial.py  sptmath.py  sptmath.txt  sptyaml.py
applications/sptEditor/src/db/: __init__.py  binwriter.py  export.py  sctwriter.py  scvwriter.py  vrtwriter.py
applications/sptEditor/src/model/: __init__.py  groups.py  properties.py  scenery.py  tracks.py
applications/sptEditor/src/osgwx/: CMakeLists.txt  osgViewerWX.cpp  osgViewerWX.h
applications/sptEditor/src/propedit/: __init__.py  controls.py  guitest.py  history.py  history_t.py  properties.py
applications/sptEditor/src/sptmath/: CMakeLists.txt  Decimal.cpp  Decimal.h  FastDec.cpp  FastDec.h  FastVec.cpp  FastVec.h  FastVec3.cpp  FastVec3.h  Vec3.cpp  Vec3.h  sptmath.cpp
applications/sptEditor/src/ui/: art_ribbon.py  dialog.py  editor.py  flatmenu.py  palette.py  propedit.py  ribbon.py  rulers.py  toolbar.py  trackfc.py  uitools.py  views.py
applications/sptEditor/test/: t_groups.py  t_scenery.py  t_sptial.py  t_switches.py  t_trackfc.py  t_tracks.py
applications/sptEditor/test/ui/: t_views.py
branches/PropertiesEditor/src/: controls.py  history.py  main.py  propedit.py  properties.py
branches/gfirlejczyk-sptEditor-OSG/: readme.txt
branches/gfirlejczyk-sptEditor-OSG/src/: Application.py  scengen.py  sptmath.py
branches/gfirlejczyk-sptEditor/src/: Application.py  Application.xrc
cmake/: PythonUtils.cmake  SptUtils.cmake  nose2bitten.xslt
doc/: Doxyfile  Doxyfile-Trac  SConscript  TracHeader.html  spt.editor.trackView.zargo
ext/: .hgsub
include/sptCore/: DynamicScenery.h  DynamicSector.h  Externals.h  Follower.h  Path.h  RailTracking.h  Scenery.h  SceneryBuilder.h  Sector.h  SimpleTrack.h  StaticSector.h  Switch.h  SwitchableTracking.h  Track.h  TrackLocator.h  TrackVisitor.h
include/sptDB/: BinaryReader.h  OsgSectorReader.h  SceneryReader.h  SectorNode.h  SectorReader.h  VariantReader.h
include/sptGFX/: Extruder.h  RailTrackingRenderer.h  TrackRenderer.h
include/sptMover/: Component.h  Mover.h  Trainset.h  Vehicle.h
include/sptUtil/: Math.h
src/: CMakeLists.txt  SConscript
src/sptCore/: CMakeLists.txt  DynamicScenery.cpp  DynamicSector.cpp  Externals.cpp  Follower.cpp  Path.cpp  RailTracking.cpp  SConscript  Scenery.cpp  SceneryBuilder.cpp  Sector.cpp  SimpleTrack.cpp  Switch.cpp  SwitchableTracking.cpp  Track.cpp  TrackLocator.cpp  TrackVisitor.cpp
src/sptDB/: BinaryReader.cpp  CMakeLists.txt  OsgSectorReader.cpp  SConscript  SceneryReader.cpp  SectorReader.cpp  VariantReader.cpp
src/sptGFX/: CMakeLists.txt  Extruder.cpp  SConscript
src/sptMover/: CMakeLists.txt  SConscript  Trainset.cpp  Vehicle.cpp
tests/: CMakeLists.txt  OsgTypeTraits.h  SConscript  trackrenderingtest.cpp
tests/sptCore/: CMakeLists.txt  DynamicScenery.t.h  DynamicSector.t.h  Follower.t.h  Follower_t.cpp  Path.t.h  Path_t.cpp  SConscript  Scenery.t.h  Scenery_t.cpp  Sector.t.h  Sector_t.cpp  SimpleTrack_t.cpp  Switch.t.h  Switch_t.cpp  Track.t.h  Track_t.cpp
tests/sptUtil/: AutoSet.t.h  SConscript
trunk/: .pydevproject  SConstruct  build_support.py
trunk/applications/: SConscript
trunk/applications/spt/: SConscript
trunk/applications/sptEditor/: readme.txt
trunk/doc/: Doxyfile  SConscript  TracHeader.html
trunk/include/sptCore/: DynamicScenery.h  DynamicSector.h  Follower.h  Follower.h~  Math.h  Path.h  Path.h~  RailTracking.h  RailTracking.h~  Scenery.h  SceneryBuilder.h  Sector.h  Sector.h~  Switch.h  Switch.h~  SwitchableTracking.h  Track.h  Track.h~
trunk/include/sptDB/: SceneryWriter.h
trunk/include/sptGFX/: Extruder.h  RailTrackingProfile.h
trunk/include/sptMover/: Vehicle.h
trunk/include/sptUtil/: AutoMap.h  AutoSet.h  ManagingMap.h  Math.h
trunk/models/: bogie.ive
trunk/src/: SConscript
trunk/src/sptCore/: DynamicScenery.cpp  DynamicSector.cpp  Follower.cpp  Path.cpp  RailTracking.cpp  SConscript  SceneryBuilder.cpp  Switch.cpp  SwitchableTracking.cpp  Track.cpp
trunk/src/sptGFX/: Extruder.cpp
trunk/tests/: SConscript
trunk/tests/sptCore/: DynamicScenery.t.h  DynamicSector.t.h  Follower.t.h  Path.t.h  SConscript  Switch.t.h  Track.t.h
trunk/tests/sptUtil/: AutoMap.t.h  SConscript
trunk/wrappers/: SConscript
trunk/wrappers/sptCore/: SConscript
wrappers/: CMakeLists.txt  SConscript
wrappers/sptCore/: CMakeLists.txt  SConscript  sptCore.cpp  wrappers.py
wrappers/sptMover/: CMakeLists.txt  sptMover.cpp
(+34 files in other folders)
